# synki

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agent.py  analyze_user.py  api_server.py  cartesia_voices.json  check_data.py  check_memory.py  connections_migration.sql  create_topics.py  debug_memory.py  debug_topic.py  enable_realtime_migration.sql  fix_scheduler_metadata.py  p2p_calls_schema.sql  proactive_schema.sql  pyproject.toml  setup_database.py  smart_memory_schema.sql  supabase_memory_schema.sql  supabase_schema.sql  test_chat.py  test_ctx.py  test_data.py  test_db.py  test_direct.py  test_load.py  test_sum.py  test_with_client.py
docs/: architecture.md
frontend/: app.html  call.html  firebase-messaging-sw.js  index.html  sw.js  test_notification.html
frontend/css/: styles.css  synki.css
frontend/js/: api.js  app.js  auth.js  config.js  livekit.js  synki-app.js
scripts/: comprehensive_memory_tests.py  test_memory_extraction.py
src/synki/: __init__.py  config.py  models.py
src/synki/agent/: __init__.py  __main__.py  companion_agent.py  topic_agent.py
src/synki/orchestrator/: __init__.py  anti_repetition.py  context_builder.py  context_manager.py  emotion_detector.py  enhanced_orchestrator.py  entity_extractor.py  intent_detector.py  layered_memory.py  memory_intelligence.py  memory_service.py  orchestrator.py  persona_engine.py  personalized_context.py  proactive_memory.py  (+8 more)
tests/: conftest.py  test_emotion_detector.py  test_intent_detector.py  test_layered_memory.py  test_persona_engine.py  test_proactive_memory.py
(+12 files in other folders)
